--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <main class="main">
   <header>
-      Curso Online
   </header>
-  <section class="content">
+  <section>
     <router-outlet></router-outlet>
   </section>
 </main>
