wip - registrar usuario e gerar senha

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
 
                     <button type="submit">Login</button>
                 
-                    <a href="#">
+                    <a routerLink="/register">
                         <p>Criar uma conta</p>
                     </a>
                 </form> 
